plugins/kotlin/idea/tests/testData/multiplatform/expectActualLineMarkers/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in [iosX64, sharedLinux] modules'; targets=[(text=iosX64); (text=sharedLinux)]")!>ActualizedInSharedAndLeaf<!>

expect class <!LINE_MARKER("descr='Has actuals in [iosX64, linuxArm64, linuxX64] modules'; targets=[(text=iosX64); (text=linuxArm64); (text=linuxX64)]")!>ActualizedInLeaves<!>
